--- a/views/documentSuccessful.ejs
+++ b/views/documentSuccessful.ejs
@@ -16,17 +16,17 @@
 					<a href="/login" class="btn btn-success">Dashboard</a>
 				</div>
 				<div class="col-xs-2">
-					<p>Welcome lagbaja</p>
+					<p id="user"><%=user%></p>
 				</div>
 				<div class="col-xs-2">
-					<a href="/">Log out</a>
+					<a href="/logOut">Log out</a>
 				</div>
 			</div>
 
 		</div>
 		<div>
 			<div>Document Succesfully Added!</div>
-			<div>Document Details</div>
+			<div>Document Details:</div>
 			<ul class="group-list">
 					<li class="list-group-item">Title: <%=documentAdded.title%></li>
 					<li class="list-group-item">Link(Url): <%=documentAdded.url%></li>
