--- a/views/createDocument.ejs
+++ b/views/createDocument.ejs
@@ -10,17 +10,17 @@
 <body>
 	<div class="container">
 		<h1 id="header">Document Management System(DMS)</h1>
-			<div class="row">
-				<div class="col-xs-8">
-					<a href="/login" class="btn btn-success">Dashboard</a>
-				</div>
-				<div class="col-xs-2">
-					<p id="user"><%=user%></p>
-				</div>
-				<div class="col-xs-2">
-					<a href="/logOut">Log out</a>
-				</div>
-			</div>
+ 		<nav class="navbar navbar-inverse">
+  			<div class="container-fluid">
+    			<div class="navbar-header">
+      				<a class="navbar-brand" href="/login">Dashboard</a>
+    			</div>
+    			<ul class="nav navbar-nav">
+      				<li><a><%=user%></a></li>
+    			</ul>
+    			<a href="/logOut"><button class="btn btn-danger navbar-btn">Log out</button></a>
+  			</div>
+		</nav>
 		<div id="createDocument">
 			<form action="/createDocument" method="post" class="form-horizontal">
 			<h3 id="formTitle">Create Document</h3>
