--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -38,6 +38,7 @@
 			<input type="submit" name="submit" value="Sign up" class="btn btn-primary"/>
 		</form>
 	</div>
+	<p id="signupredirect">You already have an account? <a href="/">Login</a></p>
 	<p id="footer">Andela &copy 2017</p>
 	</div>
 </body>
