--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,6 +4,7 @@
 <title>
 	Andela Document Management System
 </title>
+	<meta name = "viewport" content = "width=device-width, initial-scale=1"/>
 	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="test.css">
 </head>
