Update app and ejs files

--- a/views/searchDocument.ejs
+++ b/views/searchDocument.ejs
@@ -53,37 +53,56 @@
 			</form>
 		</div>
 
-<form class="form-horizontal" id="searchDocDepartment">
-	<div class="form-group">
-		<label class="control-label col-xs-2">Department</label>
-		<div class="col-xs-10">
-			<select class="form-control" name="departmentInput" id="searchInputDepartment">
-				<option><i>Click to select department</i></option><option>Success</option><option>Learning</option><option>Operations</option>
-				<option>Finance</option><option>Recruitment</option><option>Sales</option><option>Marketing</option></select></div></div>
-				<div class="form-group">
+		<form class="form-horizontal" id="searchDocDepartment">
+			<div class="form-group">
+				<label class="control-label col-xs-2">Department</label>
+				<div class="col-xs-10">
+					<select class="form-control" name="departmentInput" id="searchInputDepartment">
+						<option>Click to select department</option>
+						<option>Success</option>
+						<option>Learning</option>
+						<option>Operations</option>
+						<option>Finance</option>
+						<option>Recruitment</option>
+						<option>Sales</option>
+						<option>Marketing</option>
+					</select>
+				</div>
+			</div>
+			<div class="form-group">
 				<div class="col-xs-offset-2 col-xs-10">
-		<input type="submit" name="submit" value="Search" class="btn btn-primary"/></div></div>
-</form>
+					<input type="submit" name="submit" value="Search" class="btn btn-primary"/>
+				</div>
+			</div>
+		</form>
 
-<form class='form-horizontal' id='searchDocKeyword'>
-		<div class='form-group'>
-			<label class='control-label col-xs-2'>Keyword(s)</label>
-				 <div class='col-xs-10'>
-				 	<input type='text' name='keywordInput' class='form-control' placeholder='e.g budget,2017' id='searchInputKeyword'/></div></div>
-				<div class='form-group'>
+		<form class='form-horizontal' id='searchDocKeyword'>
+			<div class='form-group'>
+				<label class='control-label col-xs-2'>Keyword(s)</label>
+				<div class='col-xs-10'>
+					 <input type='text' name='keywordInput' class='form-control' placeholder='e.g budget,2017' id='searchInputKeyword'/>
+				</div>
+			</div>
+			<div class='form-group'>
 				<div class='col-xs-offset-2 col-xs-10'>
-				<input type='submit' name='submit' value='Search' class='btn btn-primary' id='searchDocument'/></div></div>
-</form>
+					<input type='submit' name='submit' value='Search' class='btn btn-primary' id='searchDocument'/>
+				</div>
+			</div>
+		</form>
 
-<form class='form-horizontal' id='searchDocUsername'>
-		<div class='form-group'>
-			<label class='control-label col-xs-2'>Username</label>
+		<form class='form-horizontal' id='searchDocUsername'>
+			<div class='form-group'>
+				<label class='control-label col-xs-2'>Username</label>
 				 <div class='col-xs-10'>
-				 	<input type='text' name='keywordInput' class='form-control' placeholder='e.g <your username>' id='searchInputUsername'/></div></div>
-				<div class='form-group'>
+				 	<input type='text' name='keywordInput' class='form-control' placeholder='e.g <your username>' id='searchInputUsername'/>
+				 </div>
+			</div>
+			<div class='form-group'>
 				<div class='col-xs-offset-2 col-xs-10'>
-				<input type='submit' name='submit' value='Search' class='btn btn-primary' id='searchDocument'/></div></div>
-</form>
+					<input type='submit' name='submit' value='Search' class='btn btn-primary' id='searchDocument'/>
+				</div>
+			</div>
+		</form>
 
 		<div class="table-responsive" id="searchDisplay">
 			
